<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/signed_user"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sign_user" />
        <item
            android:id="@+id/all_user"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/all_user" />
        <item
            android:id="@+id/book"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/books" />
    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/me"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/me" />

            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
